# DShuffle

./: .clang-format  .gitignore  README  meson.build  pom.xml
app/: meson.build  mount.hxx
app/direct_spill_impl/: dpu_file_spill.cxx  host_daemon.cxx  meson.build  rpc.hxx
app/naive_offload_serde_server/: meson.build  naive_offload_serde_server.cxx
app/naive_offload_server/: Partitioner.java  meson.build  naive_offload_server.cxx
app/offload_server/: meson.build  offload_server.cxx
app/pipeline_offload_server/: meson.build  pipeline_offload_server.cxx
app/spdk_spill_impl/: dpu_file_spill.cxx  file_rpc.hxx  host_file_server.cxx  meson.build
doc/: java_ossp.md
example/: bench.cxx  dpa_msgq.cxx  dpa_msgq_dev.c  dpa_rdma_s.cxx  meson.build  mmap_test.cxx  spill_test.cxx
hook/: hook_mmap.c  meson.build
lib/: meson.build
lib/common/: context_base.hxx
lib/doca/: buffer.hxx  check.hxx  device.cxx  device.hxx  dpa_buffer.hxx  dpa_thread.cxx  dpa_thread.hxx  helper.cxx  helper.hxx
lib/doca/kernel/: dpaintrin.h  helper.h  map.h  mem.h  thread_args.h  wakeup.c
lib/memory/: local_buffer.hxx  memory_region.hxx  naive_buffer.hxx  simple_allocator.hxx  simple_buffer_pool.hxx
lib/native/: disk_agent.hxx  meson.build  naive_offloader.hxx  naive_trans_native.cxx  naive_trans_native.hxx  offload.hxx  pipeline_trans_native.cxx  pipeline_trans_native.hxx  sd_native.cxx  sd_native.hxx  serde_native.cxx  serde_native.hxx  shuffle_worker.hxx  spill_agent.hxx  spill_worker.hxx  trans_native.cxx  trans_native.hxx  worker.hxx
lib/sd/: meson.build
lib/sd/common/: args.h  basic_type.h  class_info.h  meta.h
lib/sd/kernel/: meson.build  sd.c
lib/sd/native/: basic_type.hxx  class_info.hxx  class_resolver.cxx  class_resolver.hxx  class_walker.cxx  class_walker.hxx  fake.hxx  jenv_util.cxx  jenv_util.hxx  jvm_args.hxx  map.hxx  meson.build  object_reviver.cxx  object_reviver.hxx  object_walker.cxx  object_walker.hxx  options.hxx  rw_buffer.hxx  sd.cxx  sd.hxx
lib/spdk_spill/: file_frag.hxx  io_buffer.hxx  meson.build  spdk_env.hxx  spdk_nvme.cxx  spdk_nvme.hxx
lib/trans/: meson.build  readme.md  transport.hxx
lib/trans/common/: bulk.hxx  connection.hxx  context.hxx  defs.hxx  endpoint.hxx  rpc.hxx  serializer.hxx
lib/trans/concept/: byte_view.hxx  connection_handle.hxx  endpoint.hxx  rpc.hxx
lib/trans/priv/doca/: caps.hxx
lib/trans/priv/doca/comch/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/trans/priv/doca/rdma/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/trans/priv/tcp/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/trans/priv/verbs/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/util/: bind_core.hxx  enum_formatter.hxx  fatal.hxx  hex_dump.hxx  j_util.hxx  literal.hxx  logger.hxx  noncopyable.hxx  nonmovable.hxx  simple_object_pool.hxx  socket.cxx  socket.hxx  spin_lock.cxx  spin_lock.hxx  string_hash.hxx  timer.hxx  unreachable.hxx  upper_align.hxx
sample/: meson.build  min_comch_client.cxx  min_comch_server.cxx  zpp_bits_sample.cxx
scripts/: bench.sh  gen_dbg.sh  naive_spill_test.sh  run.sh  run_jsbs.sh  run_sd_bench.sh  run_tgt.sh  setup.sh  setup_tgt.sh  spdk_setup.sh  spill_test.sh
src/main/java/pdsl/dpx/: NaiveTransEnv.java  Options.java  PipelineTransEnv.java  SD.java  Serde.java  SerdeInputStream.java  SerdeOutputStream.java  TransEnv.java
src/main/java/pdsl/dpx/bench/: Benchmark.java  HugeBench.java  NaiveSpill.java  NioBufferedFileInputStream.java  PipelineSpill.java  SerdeBench.java  SerdeIterBench.java  SmallBench.java  Spill.java
src/main/java/pdsl/dpx/bench/jsbs/: A.java  B.java  C.java  D.java  E.java  F.java  Image.java  Media.java  MediaContent.java
src/main/java/pdsl/dpx/type/: InterfaceTypeMapping.java  RelatedClassCollector.java  TypeTraits.java
src/test/java/pdsl/: TestSD.java
subprojects/: MPMCQueue.wrap  SPSCQueue.wrap  args.wrap  dbg-macro.wrap  glaze.wrap  simdutf.wrap  spdk.wrap  zpp_bits.wrap
subprojects/packagefiles/MPMCQueue/: meson.build
subprojects/packagefiles/MPMCQueue/include/: meson.build
subprojects/packagefiles/SPSCQueue/: meson.build
subprojects/packagefiles/SPSCQueue/include/: meson.build
subprojects/packagefiles/args/: meson.build
subprojects/packagefiles/args/include/: meson.build
subprojects/packagefiles/dbg-macro/: meson.build
subprojects/packagefiles/dbg-macro/include/: meson.build
subprojects/packagefiles/spdk/: meson.build  spdk_configure.sh  spdk_configure_debug.sh
subprojects/packagefiles/zpp_bits/: meson.build
tool/: doca_device_probe.cxx  meson.build  uring_probe.cxx
